--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     
 </head>
 
-<body ng-app="app">
+<body id="body" ng-app="app">
     <div ui-view></div>
     <script src="scripts.js"></script>
 </body>
