Adding Filter HMR, controller HMR.

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,7 +1,7 @@
-<h1>{{home.homeService.message}}</h1>
+<h1>{{home.homeService.message | example}}</h1>
 <p>Current count: {{home.homeService.count}}</p>
 <button ng-click="home.homeService.incrementCount()">Increment</button>
 <hr>
-<h1>{{home.HomeFactory.message}}</h1>
+<h1>{{home.HomeFactory.message | example}}</h1>
 <p>Current count: {{home.HomeFactory.count}}</p>
 <button ng-click="home.HomeFactory.incrementCount()">Increment</button>
