Adding newest version of monoscope angular. Adding npm run dev and npm run prod commands.

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -5,3 +5,5 @@
 <h1>{{home.HomeFactory.message | example}}</h1>
 <p>Current count: {{home.HomeFactory.count}}</p>
 <button ng-click="home.HomeFactory.incrementCount()">Increment</button>
+<hr>
+<home></home>
