--- a/src/home/home.html
+++ b/src/home/home.html
@@ -5,6 +5,6 @@
 <h1>{{home.HomeFactory.message | example}}</h1>
 <p>Current count: {{home.HomeFactory.count}}</p>
 <button ng-click="home.HomeFactory.incrementCount()">Increment</button>
-<img src="images/sample.png"></img>
+<img src="../images/sample.png">
 <hr>
 <home></home>
