--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>App</title>
+    <title>My Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
 </head>
 
 <body id="body" ng-app="app">
-    <div ui-view></div>
+    <navbar></navbar>
+    <div ui-view="" class="ui-view-div"></div>
     <script src="scripts.js"></script>
 </body>
 
