--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
 
 <body id="body" ng-app="app">
     <div ui-view></div>
-    <script src="scripts.js"></script>
+    <script src="app.js"></script>
+    <script src="test.js"></script>
 </body>
 
 </html>
